--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,7 +4,8 @@
 :root {
   --offwhite: #f7f6f9;
   --background-blue: #046ce0;
-  --max-width: 1700px;
+  --max-width: 1300px;
+  --readability-width: 650px;
   --black: #161616;
 }
 
@@ -57,7 +58,6 @@ body,
 .section {
   min-height: 200px;
   margin-bottom: 100px;
-  /* border: 1px solid black; */
 }
 
 .btn {
@@ -194,6 +194,7 @@ body,
 /****************************************/
 .free-ads {
   height: 80vh;
+  max-height: 1000px;
   max-width: 380px;
   margin-inline: auto;
   margin-top: 4em;
